--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,11 @@
     <string name="signupcomplete_username">Default_User님,</string>
     <string name="signupcomplete_welcome_text">Ttwwi에 가입하신 것을 환영합니다!</string>
     <string name="signupcomplete_start_button">확인</string>
+    <!--  MyPageActivity  -->
+    <string name="mypage_welcome_text">님, 안녕하세요!</string>
+    <string name="mypage_nofeed_notification">여러분의 추억을 남겨보세요!</string>
+    <string name="mypage_profile_edit_photo_text">프로필 사진 변경하기</string>
+    <string name="mypage_profile_edit_nickname_text">닉네임 변경하기</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
