--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,12 @@
     <string name="mypage_nofeed_notification">여러분의 추억을 남겨보세요!</string>
     <string name="mypage_profile_edit_photo_text">프로필 사진 변경하기</string>
     <string name="mypage_profile_edit_nickname_text">닉네임 변경하기</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--  EditTripPageFragment  -->
+    <string name="edittrippage_title_text">제목</string>
+    <string name="edittrippage_subtitle_text">부제</string>
+    <string name="edittrippage_password_text">비밀번호</string>
+    <string name="edittrippage_profile_photo_text">프로필 사진 등록</string>
+    <string name="edittrippage_description_text">설명</string>
+    <string name="edittrippage_sns_invite_text">소셜 로그인 친구초대</string>
+    <string name="edittrippage_profile_photo_register_text">사진 등록하기</string>
 </resources>
